--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --cor-fundo: #01080E;
     --cor-principal: #0B0D20 ;
     --cor-secundaria: #212333;
-    --cor-destaque: #2BDEFD;
+    --cor-destaque: #18a72b;
     --cor-texto: #D7F9FF;
 }
   
